updates from web uploads

--- a/my/tnc.html
+++ b/my/tnc.html
@@ -103,7 +103,7 @@ Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimed
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
 
     
 
@@ -113,26 +113,26 @@ Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimed
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">Terma &amp; Syarat</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7"><strong>NOTIS PERUNDANGAN:</strong><br><br><strong>
 </strong><div>
-</div><div>* Semua artikel, produk dan perkhidmatan yang diterbitkan tertakluk kepada penganiayaan sekiranya terdapat peristiwa seperti penerbitan semula, replikasi apa-apa jenis.
+</div><div>* Semua artikel, produk dan perkhidmatan yang diterbitkan tertakluk kepada penganiayaan sekiranya terdapat peristiwa seperti penerbitan semula, replikasi apa-apa jenis.</div><br><div>
 </div><div>
-</div><div>* Sekiranya pembayaran semula seperti yuran hosting / yuran sewa / rancangan perkongsian untung, tertakluk kepada kadar harga semasa yang ditetapkan oleh rakan pihak ketiga kami.
+</div><div>* Sekiranya pembayaran semula seperti yuran hosting / yuran sewa / rancangan perkongsian untung, tertakluk kepada kadar harga semasa yang ditetapkan oleh rakan pihak ketiga kami.</div><br><div>
 </div><div>
 </div><div>
-</div><div>* Semua operasi perniagaan yang dinyatakan jika tidak disebutkan tertakluk di bawah
+</div><div>* Semua operasi perniagaan yang dinyatakan jika tidak disebutkan tertakluk di bawah</div><br><div>
 </div><div>
 </div><div><strong>Akta Syarikat. 2016, (Suruhanjaya Syarikat Malaysia).
 </strong></div><div><strong>
-</strong></div><div><strong>Akta Perdagangan Elektronik 2006 (ECA), yang mengiktiraf kesahan kontrak elektronik dan tandatangan.
+</strong></div><div><strong>Akta Perdagangan Elektronik 2006 (ECA), yang mengiktiraf kesahan kontrak elektronik dan tandatangan.</strong></div><br><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>Akta Perlindungan Data Peribadi 2010 (PDPA), yang mentadbir penggunaan data peribadi (termasuk data peribadi pengguna laman web).
+</strong></div><div><strong>Akta Perlindungan Data Peribadi 2010 (PDPA), yang mentadbir penggunaan data peribadi (termasuk data peribadi pengguna laman web).</strong></div><br><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>Akta Perlindungan Pengguna 1999 (CPA), yang terpakai bagi semua barang dan perkhidmatan yang ditawarkan kepada pengguna dalam perdagangan (termasuk apa-apa urus niaga perdagangan yang dilakukan melalui alat elektronik) di mana barangan / perkhidmatan terutamanya dibeli, digunakan atau dimakan untuk keperluan peribadi, domestik atau isi rumah.
+</strong></div><div><strong>Akta Perlindungan Pengguna 1999 (CPA), yang terpakai bagi semua barang dan perkhidmatan yang ditawarkan kepada pengguna dalam perdagangan (termasuk apa-apa urus niaga perdagangan yang dilakukan melalui alat elektronik) di mana barangan / perkhidmatan terutamanya dibeli, digunakan atau dimakan untuk keperluan peribadi, domestik atau isi rumah.</strong></div><br><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>Peraturan Perlindungan Pengguna (Transaksi Perdagangan Elektronik) 2012 (Peraturan ETT) yang mengawal pengendali yang membekalkan barang atau perkhidmatan melalui laman web atau pasaran dalam talian.
+</strong></div><div><strong>Peraturan Perlindungan Pengguna (Transaksi Perdagangan Elektronik) 2012 (Peraturan ETT) yang mengawal pengendali yang membekalkan barang atau perkhidmatan melalui laman web atau pasaran dalam talian.</strong></div><br><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>Akta Perihal Dagangan 2011 (TDA), yang melarang perihalan perdagangan palsu dan pernyataan palsu, mengelirukan, dan amalan berkaitan dengan pembekalan barang atau perkhidmatan (termasuk melalui cara elektronik).
+</strong></div><div><strong>Akta Perihal Dagangan 2011 (TDA), yang melarang perihalan perdagangan palsu dan pernyataan palsu, mengelirukan, dan amalan berkaitan dengan pembekalan barang atau perkhidmatan (termasuk melalui cara elektronik).</strong></div><br><div><strong>
 </strong></div><div><strong>
-</strong></div><div><strong>Akta Jualan Barang 1957 (SGA), yang mengawal kontrak bagi penjualan barangan di Malaysia.
+</strong></div><div><strong>Akta Jualan Barang 1957 (SGA), yang mengawal kontrak bagi penjualan barangan di Malaysia.</strong></div><br><div><strong>
 </strong></div><div><strong>
 </strong></div><div><strong>Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimedia dan komunikasi di Malaysia, termasuk pembekal perkhidmatan aplikasi kandungan (seperti pengendali laman web).</strong></div><br><div><strong>
 </strong></div><div>
