--- a/my/tnc.html
+++ b/my/tnc.html
@@ -103,7 +103,7 @@ Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimed
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="mbr-section article content12 cid-rJN4UoUr8x" id="content12-27">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content12 cid-rJN4UoUr8x" id="content12-27">
      
 
     <div class="container">
