google drive embed videos

--- a/my/contact.html
+++ b/my/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RlF9WRizFqySvpfywWvJqlkGIpHNt6uLgb+qxyF+aFkuOIe8z5RyFVWB98J+1fDP67cEImi+eTZLDTS41LJtGSS4O5aR39wHbyKVDprrwpWlYSLqOl6sTwTslAxbsMBL">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6U4+E42BwImEBHfxRORDXhvIJJtIRJ4X+cl9f5zrLDCHFhhOc34Py33knUD4Gw4R0tLnKX5+Og2d5fw/UU6ieUtNEZVuCsN2P+cAVJ8c6apI/9ETEc3Jkxf75hAHO+9L">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -113,7 +113,7 @@
                                     <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-21">
                                 </div>
                                 <div data-for="phone" class="col-md-12 form-group ">
-                                    <input type="tel" name="phone" placeholder="Whatsapp (Tidak Wajib)" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-21">
+                                    <input type="tel" name="phone" placeholder="Whatsapp (Jika Perlu)" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-21">
                                 </div>
                                 <div data-for="message" class="col-md-12 form-group ">
                                     <textarea name="message" placeholder="Ucapan" data-form-field="Message" class="form-control px-3 display-7" id="message-header15-21"></textarea>
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5sYuTCSK1AuV7HEzihNvPrShz4DY7XO6ADNAQ7z5QTmWQIrA9djKF4RwdCfPx5+uEA9R66F8WbPTfh4hk0eH+dkhAjVzTvOt6x/rmV+n48EEnJDYTfSSYn8Y7gs3hjkd">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="f6qEMDuG/UKScWHpOI1yFwF4ux4TbHcUHdCC9fbTscGj/LCTUwWUirTSOaZYCNVyIAR5ScQztUxC4pMgapdMNJu73JaN/V37J2XWlbk2aa0o08Us+7NvfTJ0PVdRa1Gu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
