update video self host

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZNM4u9wnegNBFio91zdhJ7IghWN4EKV9r43v99y1tyjE0C4kxf8cqIxPqOzChsNIFj1UMDKM2Qvh4kA1wz//vlkx27zKEyVuIS3ezwzsUgwUVbXyYq7D8R+8s1QQjlc3">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rz71yxP2jkKsGGbhfMflla25sj7E1Ky/u+aedu1VhyFQXT6a6LhuFMGabjn2qong/BAyFcoY1vzMMeu4l+hN3bd0fmaEmCf2vU1D+RRSD8BhGrtjxalaIl7f0KpyJQFO">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your message has been received. Thanks!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -230,7 +230,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rHlBpR/7aP3OGoYY1fBEA2ftuFLVrZ+rRnXTLXF1AMvz5Yxwrv1NHL80e/BH/QDDknqJuFclL9KXbzuHCONBQEcI7LhO4gzTcTtdw9t9l+bYjIBOzuif/baxcBxc8nk3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BkBZIfWiLcRzhZ6up1aV7ELzR+08nXlauOasCmLD/HkhhUDHb3bfrQX6OrR5Y/wEVSkK4/0n0HXfYPAZt+pISyhQm1dkJlKB60CmZG8lJRDp+avYCZ6CaCWKXF9i0Qnd">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email received. You are now subscribed for my updates. Thanks!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
