--- a/tnc.html
+++ b/tnc.html
@@ -8,7 +8,7 @@
   <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image:src" content="assets/images/tnc-meta.jpg"/>
 <meta property="og:image" content="assets/images/tnc-meta.jpg"/>
-<meta name="twitter:title" content="I am Bird Lee | Terms & Condition"/>
+<meta name="twitter:title" content="I am Bird Lee | Terms & Conditions"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-for-favicon-round-01-128x128.png" type="image/x-icon">
   <meta name="description" content="* All published articles, product & services are subjected to procecution if there are events such as replublishing, replication of any kind.
@@ -32,7 +32,7 @@ Trade Descriptions Act 2011 (TDA), which prohibits false trade descriptions and 
 Sale of Goods Act 1957 (SGA), which governs contracts for the sale of goods in Malaysia.
 Communications and Multimedia Act 1998 (CMA), which regulates the multimedia and communications industry in Malaysia, including content applications service providers (such as website operators).">
   
-  <title>I am Bird Lee | Terms & Condition</title>
+  <title>I am Bird Lee | Terms & Conditions</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -101,7 +101,7 @@ Communications and Multimedia Act 1998 (CMA), which regulates the multimedia and
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
 
     
 
