--- a/my/work.html
+++ b/my/work.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content4 cid-rIjnif3NGj" id="content4-d">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content4 cid-rIjnif3NGj" id="content4-d">
 
     
 
@@ -296,7 +296,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/my/Cat Shop/"><img src="assets/images/thumbnails-6.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/my/Cat Shop/"><img src="assets/images/thumbnails-6.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -309,7 +309,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/EBook/"><img src="assets/images/thumbnails-5.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/EBook/"><img src="assets/images/thumbnails-5.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -322,7 +322,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/my/Sample restaurant/"><img src="assets/images/thumbnails-2.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/my/Sample restaurant/"><img src="assets/images/thumbnails-2.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -335,7 +335,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/my/Ticket Counter/"><img src="assets/images/thumbnails-1.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/my/Ticket Counter/"><img src="assets/images/thumbnails-1.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -347,7 +347,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/my/AllishaArmizi"><img src="assets/images/thumbnails-3.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/my/AllishaArmizi"><img src="assets/images/thumbnails-3.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
