--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content4 cid-rIjnif3NGj" id="content4-d">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content4 cid-rIjnif3NGj" id="content4-d">
 
     
 
@@ -300,7 +300,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/Cat Shop/"><img src="assets/images/thumbnails-6.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/Cat Shop/"><img src="assets/images/thumbnails-6.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -313,7 +313,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/EBook/"><img src="assets/images/thumbnails-5.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/EBook/"><img src="assets/images/thumbnails-5.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -326,7 +326,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/Sample restaurant/"><img src="assets/images/thumbnails-2.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/Sample restaurant/"><img src="assets/images/thumbnails-2.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -339,7 +339,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/Ticket Counter/"><img src="assets/images/thumbnails-1.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/Ticket Counter/"><img src="assets/images/thumbnails-1.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -351,7 +351,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://iambirdlee.gq/websample/ZulNabila/"><img src="assets/images/thumbnails-4.jpg" alt="Mobirise" title=""></a>
+                        <a href="https://iambirdlee.gq/websample/ZulNabila/"><img src="assets/images/thumbnails-4.jpg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
