--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -9,14 +9,14 @@
 
     </head>
 <body>
-<div id='vrview'width='100%' height='600px'></div>
+<div id='vrview'></div>
 <script>
 window.addEventListener('load', onVrViewLoad);
 
 function onVrViewLoad() {
   // Selector '#vrview' finds element with id 'vrview'.
   var vrView = new VRView.Player('#vrview', {
-    image: 'R0010001_xmp_e.jpg',
+    image: 'R0010001.jpg',
     is_stereo: true
   });
 }
