--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -9,7 +9,7 @@
 
     </head>
 <body>
-<div id='vrview'></div>
+<div id='vrview'>
 <script>
 window.addEventListener('load', onVrViewLoad);
 
@@ -21,5 +21,10 @@ function onVrViewLoad() {
   });
 }
 </script>
+</div>
+
+<iframe src="https://storage.googleapis.com/vrview/2.0/embed?img=https://iambirdlee.gq/R0010001.jpg&is_stereo=true">
+</iframe>
+
 </body>
 </html>
