--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -10,6 +10,10 @@
     </head>
 <body>
 <div id='vrview'>
+<iframe src="R0010001.jpg">
+</iframe>
+
+</div>
 <script>
 window.addEventListener('load', onVrViewLoad);
 
@@ -21,10 +25,6 @@ function onVrViewLoad() {
   });
 }
 </script>
-</div>
-
-<iframe src="https://storage.googleapis.com/vrview/2.0/embed?img=https://iambirdlee.gq/R0010001.jpg&is_stereo=true">
-</iframe>
 
 </body>
 </html>
