--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -9,7 +9,8 @@
 
     </head>
 <body>
-<div id='vrview'></div>
+<div id='vrview' width="100%" height="600px"></div>
+
 <script>
 window.addEventListener('load', onVrViewLoad);
 
@@ -21,11 +22,6 @@ function onVrViewLoad() {
   });
 }
 
-// Selector '#vrview' finds element with id 'vrview'.
-var vrView = new VRView.Player('#vrview', {
-  image: 'R0010001.jpg',
-  is_stereo: true
-});
 </script>
 
 </body>
