--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -9,7 +9,7 @@
 
     </head>
 <body>
-<div id='vrview' width="100%" height="600px"></div>
+<div id='vrview'></div>
 
 <script>
 window.addEventListener('load', onVrViewLoad);
