--- a/Test360photo2.html
+++ b/Test360photo2.html
@@ -17,7 +17,7 @@ window.addEventListener('load', onVrViewLoad);
 function onVrViewLoad() {
   // Selector '#vrview' finds element with id 'vrview'.
   var vrView = new VRView.Player('#vrview', {
-    image: 'https://iambirdlee.gq/R00105401.jpg',
+    video: 'https://iambirdlee.gq/R00105401.jpg',
     is_stereo: true
   });
 }
