update vr and spellings

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
 
     
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/home-page-bg-1.jpg" alt="Mobirise" title="">
+            <img src="assets/images/home-page-bg-1.jpg" alt="" title="">
             
         </div>
     </figure>
