--- a/my/index.html
+++ b/my/index.html
@@ -82,13 +82,13 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
+<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
 
     
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/home-page-bg-my.jpg" alt="Mobirise" title="">
+            <img src="assets/images/home-page-bg-my.jpg" alt="" title="">
             
         </div>
     </figure>
