update malay grammar

--- a/my/contact.html
+++ b/my/contact.html
@@ -74,7 +74,7 @@
                     <a class="nav-link link text-black display-4" href="work.html">
                         Kerja Saya</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
-                        Hubungi Saya</a></li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
+                        Hubungi Saya</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
                         Bahasa</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="index.html">Malay<br></a><a class="text-black dropdown-item display-4" href="https://iambirdlee.gq/">English<br></a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="tnc.html">
                         T &amp; C</a></li></ul>
             
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -93,13 +93,13 @@
             <div class="mbr-white col-lg-8 col-md-7 content-container">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
                     Pertanyaan?</h1>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Komen &amp; cadangan sentiasa dialu-alukan. Akan menjadi lebih hebat jika kita boleh bekerjasama. Sila isi pertanyaan anda dalam bentuk yang disediakan. Saya gembira dapat membalas secepat mungkin. Terima kasih!</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Komen &amp; cadangan sentiasa dialu-alukan. Akan menjadi lebih hebat jika kita dapat bekerjasama. Sila isi pertanyaan anda dalam ruangan yang disediakan. Saya akan membalasnya secepat mungkin. Terima kasih!</p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1D39DfoWValoPfqIrx7wuLNxL89oIqokWbTiWbTKddYrFNuEtmv+HKGZDBYhLyUi9UVJslE4WDL3OOT9vUXqq8WkU14Rm19KtiJtDAXuUTeUfBXnsmFss+wLzRxW6M0g">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r1FPXkHgRdNUIkvUbTlY0849y+iiMgAYCYNFYsphtGfR4mVfj8/o9LQ9Ki/T/tThqKgXGLT9l7gextehmi1jYc5eh3ytr+fo0Y/Tb6vhlCY+71A4yiGQ/4m9VOPxTfGy">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d1KTcqgmfyArZSWVxr1+a8i58jFLHIQsO1N6JGHli9zz5q+TgF1n3blAMPe1fgTgKdEtI/QScccaYvbFQp3Yph6HnZsYB09/nYHNc5gBl9OBh+gZq6NrcigaP4wA97Ec">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="40DoqWRn6HYqOUQcg8ww/KZEZLJmxotP2KihW6hDczyhfrSNAOrcnfxQu9pkn46yd6vL5d1WriyO4iKSjSJzseSkaMAab2FAU36FYQ0Qm4m3pQ2j8cj10fRhhcC6+TCE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
