--- a/websample/my/AllishaArmizi/index.html
+++ b/websample/my/AllishaArmizi/index.html
@@ -167,7 +167,7 @@
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
                                     <label class="form-control-label mbr-fonts-style display-7" for="name-form1-8">Nama</label>
-                                    <input type="text" class="form-control" name="name" data-form-field="Name" required="" id="name-form1-8">
+                                    <input type="text" class="form-control" name="name" data-form-field="Name" required id="name-form1-8">
                                 </div>
                             </div>
                             
@@ -231,7 +231,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7"><a href="https://rekalusi.com/RekalusiMY" target="_blank" class="text-white">rekalusi.com</a></p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7"><a href="https://iambirdlee.gq" target="_blank" class="text-white">I am Bird Lee</a></p>
             </div>
         </div>
     </div>
