--- a/my/contact.html
+++ b/my/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r1FPXkHgRdNUIkvUbTlY0849y+iiMgAYCYNFYsphtGfR4mVfj8/o9LQ9Ki/T/tThqKgXGLT9l7gextehmi1jYc5eh3ytr+fo0Y/Tb6vhlCY+71A4yiGQ/4m9VOPxTfGy">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2Gam8lzNiNtn1l79ZVADET4R8LorEASATEAkcIp/akpJlCnqfcSXizQ+T1dMT4Q0vLK7ZsiWh07y5XUAIAFE1os6GS6p8O2RryM7veZnAdJAT1Ge/toELDNHO8SaVPAM">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="40DoqWRn6HYqOUQcg8ww/KZEZLJmxotP2KihW6hDczyhfrSNAOrcnfxQu9pkn46yd6vL5d1WriyO4iKSjSJzseSkaMAab2FAU36FYQ0Qm4m3pQ2j8cj10fRhhcC6+TCE">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="f28kxRWNLY0fB9F1ra+tdU2Z5b6pJOSDIrXZs6OK/rE4L/KKui2+NVyDOeTl5A9N3IDxALfdDLd1dI3Qk0Hg2Rv6+Sb8fHbulkZfKOispmV5Tr4ferBl5tgVXOOBP77S">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
